# chat-rooms

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: development.yaml  test.yaml
examples/: playground.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.jsx
src/: app.rs  lib.rs
src/initializers/: chat.rs  mod.rs  socket.rs
tests/models/: users.rs
tests/requests/: auth.rs  prepare_data.rs
tests/tasks/: seed.rs
