[workspace]

[package]
name = "chat_rooms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { version = "0.7.0", default-features = false, features = [
  "cli",
  "channels",
] }

serde = "*"
serde_json = "*"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.74"
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "chat_rooms-cli"
path = "src/bin/main.rs"
required-features = []
