[workspace]

[package]
name = "chat_rooms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { version = "0.13.0", default-features = false, features = ["cli"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
async-trait = "0.1.74"
chrono = { version = "0.4", features = ["serde"] }

axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

socketioxide = { version = "0.15.1", features = ["extensions", "state"] }
tower = { version = "*" }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }

[[bin]]
name = "chat_rooms-cli"
path = "src/bin/main.rs"
required-features = []
